ajouter le servo Moteur, ajouter 2eme button
ajouter le 2eme button et servomoteur. aussi modification en Main de switch case bour eviter les boucles.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "initializer_list": "cpp",
         "unordered_map": "cpp",
         "limits": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "*.tcc": "cpp"
     }
 }
