--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,9 @@
 
 [env:uno_r4_minima]
 platform = renesas-ra
-board = uno_r4_minima 
+board = uno_r4_minima
 framework = arduino
 lib_deps = 
 	sstaub/Ticker@^4.4.0
 	arduino-libraries/Servo@^1.2.1
+	adafruit/Adafruit SSD1306@^2.5.10
